*bug* img tag using .png file shows up as broken in render

--- a/client/src/components/overview/overview-styles.css
+++ b/client/src/components/overview/overview-styles.css
@@ -3,22 +3,22 @@ font-family: 'Poiret One', cursive;
 font-family: 'Roboto', sans-serif;
 font-family: 'Thasadith', sans-serif; */
 
-:root {
-  --gray: #474747;
-}
-
-#logo, #announcement, #description, #read-all-reviews, #expanded, #category {
+#logo, #announcement, #description, #read-all-reviews, #expanded, #category, #style-selected, #sizes, #quantities, #price, #add-to-bag {
   color: var(--gray);
 }
 
-#announcement, #category, #price, #style-selected {
+#announcement, #category, #price, #style-selected, #sizes, #quantities, #add-to-bag {
   font-family: 'Thasadith', sans-serif;
+}
+
+#read-all-reviews, #expanded, #description, #logo {
+  font-family: 'Roboto', sans-serif;
 }
 
 
 #logo {
   background-color: lightslategray;
-  height: 100px;
+  height: 80px;
   width: 1300px;
 }
 
@@ -37,7 +37,7 @@ font-family: 'Thasadith', sans-serif; */
 #body {
   display: flex;
   flex-direction: row;
-  background-color: lightsteelblue;
+  /* background-color: lightsteelblue; */
   height: 900px;
 }
 
@@ -51,10 +51,11 @@ font-family: 'Thasadith', sans-serif; */
 }
 
 .thumb {
-  background-color: darkcyan;
-  width: 80px;
-  height: 80px;
+  background-color: lightsteelblue;
+  width: 70px;
+  height: 70px;
   margin: 20px 0px 0px 0px;
+  border: 1px solid var(--gray);
 }
 
 #left {
@@ -90,7 +91,6 @@ font-family: 'Thasadith', sans-serif; */
   background-color: lightyellow;
   width: 100%;
   height: 100%;
-  color: black;
   /* padding: 10px 10px 10px 10px; */
 }
 
@@ -120,12 +120,13 @@ font-family: 'Thasadith', sans-serif; */
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
   padding-left: 30px;
 }
 
 #read-all-reviews {
   padding: 30px 0px 20px 0px;
+  font-size: 13px;
 }
 
 #details {
@@ -139,7 +140,6 @@ font-family: 'Thasadith', sans-serif; */
 }
 
 #expanded {
-  font-family: 'Roboto', sans-serif;
   font-size: 40px;
   padding: 10px 0px 30px 0px;
 }
@@ -154,6 +154,7 @@ font-family: 'Thasadith', sans-serif; */
   flex-wrap: wrap;
   width: 370px;
   height: auto;
+  padding: 0px 0px 20px 0px;
 }
 
 #style-selected {
@@ -169,11 +170,38 @@ font-family: 'Thasadith', sans-serif; */
   margin: 15px 25px 15px 0px;
 }
 
-#buttons-select{
-  display: inline;
-  white-space: nowrap;
+#buttons-select, #buttons-add {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0px 0px 20px 0px;
 }
 
-#size, #quantity {
-  display: inline-block;
+#sizes, #quantities, #add-to-bag, #watch {
+  border: 1px solid var(--gray);
+  height: 75px;
+  font-weight: bold;
+  font-size: 17px;
+  padding: 0px 20px 0px 20px;
+}
+
+#sizes {
+  width: 300px;
+}
+
+#quantities {
+  width: 150px;
+}
+
+#add-to-bag {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+  text-align: left;
+}
+
+#watch {
+  width: 50px;
 }
